Add slangCheck() function

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -102,6 +102,7 @@
 			}
 		});
 		imageUploadValidate();
+		slangCheck("#new_comment", "#comment_contents");
 
 		$('#update_comment').click( function(event) {
 			if ( <%= current_user.nil? %> ) {
