--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -2,8 +2,10 @@
 
 <%= f.label :group %>
 <% 1.upto(10) do |n| %>
-	<%= image_tag s3_image_url("mymap_group_icon_#{n}.png"), id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
-	<%= f.radio_button :group, n %>
+	<label for="mymap_group_<%= n %>"> 
+		<%= image_tag s3_image_url("mymap_group_icon_#{n}.png"), id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
+		<%= f.radio_button :group, n %>
+	</label>
 <% end %>
 
 <%= f.label :contents %>
