--- a/app/views/menus/_edit.html.erb
+++ b/app/views/menus/_edit.html.erb
@@ -5,5 +5,8 @@
 			<%= render "field", f: f %>
 			<%= f.submit "update menu" %>
 		<% end %>
+
+		<!-- Cancel the editing operation. -->
+		<%= link_to "cancel", cancel_menu_path(@menu), id: "cancel_menu_#{@menu.id}", remote: true %>
 	</td>
 </tr>
