--- a/app/views/menus/create.js.erb
+++ b/app/views/menus/create.js.erb
@@ -1,4 +1,13 @@
 $("#new_menu").bind("ajax:success", function() {
 	$("#menu_section").html("<%= j render partial: "menu_titles/show", collection: @menu_titles, as: :menu_title %>");
-	//$("#new_menu_section").html("<#%= j render "menus/new" %>");
+	
+	// Clear form inputs
+	$("#menu_menu_title_id").val('none');
+	$("#menu_title_title_name").val('');
+	$("#menu_title_title_info").val('');
+	$("#menu_name").val('');
+	$("#menu_side_info").val('');
+	$("#menu_price").val('');
+	$("#menu_info").val('');
+	$("#menu_sitga").removeAttr('checked');
 });
