Add unidentified field to menus#create

--- a/app/views/menus/create.js.erb
+++ b/app/views/menus/create.js.erb
@@ -10,4 +10,5 @@ $("#new_menu").bind("ajax:success", function() {
 	$("#menu_price").val('');
 	$("#menu_info").val('');
 	$("#menu_sitga").removeAttr('checked');
+	$("#menu_unidentified").removeAttr('checked');
 });
