--- a/app/views/mymaps/_show.html.erb
+++ b/app/views/mymaps/_show.html.erb
@@ -10,12 +10,19 @@
 	<tr>
 		<td><%= @mymap.id %></td>
 		<td><%= @mymap.restaurant_id %></td>
+		
 		<% if !@mymap.rating.blank? && @mymap.rating != 0 %>
 			<td class="star_rating" data-score=<%= @mymap.rating%>></td>
 		<% else %>
 			<td></td>
 		<% end %>
-		<td><%= image_tag s3_image_url("mymap_group_icon_" + @mymap.group.to_s + ".png"), id: "mymap_group_icon_" + @mymap.group.to_s, style: "height: 20px; width: 20px;" %></td>
+
+		<% if @mymap.group != 0 %>
+			<td><%= image_tag s3_image_url("mymap_group_icon_" + @mymap.group.to_s + ".png"), id: "mymap_group_icon_" + @mymap.group.to_s, style: "height: 20px; width: 20px;" %></td>
+		<% else %>
+			<td></td>
+		<% end %>
+
 		<td><%= @mymap.contents %></td>
 	</tr>
 
