--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,5 +1,6 @@
 $("#new_comment").bind("ajax:success", function() {
 	$("#comment_count").html("<%= @restaurant.comments.count %>");
-	$("#comment_section").html("<%= j(render 'comments/page') %>");
+	$("#comment_body tbody").prepend("<%= j render partial: "comments/show", locals: { comment: @comment } %>");
+	//$("#comment_section").html("<#%= j(render 'comments/page') %>");
 	$('.pagination a').attr('data-remote', 'true');
 });
