--- a/app/views/addr_rules/show.html.erb
+++ b/app/views/addr_rules/show.html.erb
@@ -18,6 +18,6 @@
 	// Change this to normal data passing codes to js
 	$(document).ready(function(){ 
 		showMarkers(<%= @coord_array %>);
-		showLabels();
+		toggleLabels();
 	});
 </script>
