--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -74,14 +74,13 @@
 <h1>Map</h1>
 <div id="map_canvas" style="width: 80%; height: 60%"></div>
 
-<!-- This script is for require_from_group method --!>
+<!-- This script is for require_from_group method -->
 <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
 <script>
 	$(function(){
 		$('.pagination a').attr('data-remote', 'true')
 	});
 
-<<<<<<< HEAD
 	$(document).ready( function() {
 		$("#new_rest_err").validate({
 			rules: {
