Reduce restaurant index script contents

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Restaurants#index</h1>
 
 <h2>Map</h2>
-<div id="map_canvas" style="width: 80%; height: 60%"></div>
+<div id="naver_map" style="width: 80%; height: 60%"></div>
 
 <%= link_to "new restaurant", new_restaurant_path %>
 
@@ -51,56 +51,8 @@
   //	});
 	//})
 	$(document).ready( function() {
+		loadNaverMap(<%= @center_x %>, <%= @center_y %>, 8);
+		showMarkers(<%= @coord_array %>, 1, <%= raw @names %>);
 		toggleLabels();
 	});
-
-	$(document).on("page:load", initialize(<%= @center_y %>, <%= @center_x %>, 8));
-
-	function initialize(curr_lat, curr_lng, level){
-		var oSize = new nhn.api.map.Size(28, 37);
-		var oOffset = new nhn.api.map.Size(14, 37);
-		var oIcon = new nhn.api.map.Icon("https://s3-ap-southeast-1.amazonaws.com/menumap-s3-development/static_assets/images/naver_map_icon.png", oSize, oOffset);
-		var defaultLevel;
-		var centerPosition;
-		if ( curr_lat == 0 || curr_lng == 0 || isNaN(curr_lat) || isNaN(curr_lng)){
-			//default center
-			centerPosition = new nhn.api.map.LatLng(37.48121, 126.952712);
-		} else {
-			//if currentPosition was checked or center point was set
-			centerPosition = new nhn.api.map.LatLng(curr_lat, curr_lng);
-		};
-		if ( level == 0 || isNaN(level) ) {
-			defaultLevel = 10;
-		} else {
-			defaultLevel = level;
-		};
-    oMap = new nhn.api.map.Map(document.getElementById('map_canvas'), { 
-                                    		point : centerPosition,
-	                                      zoom : defaultLevel,
-	                                      enableWheelZoom : true,
-	                                      enableDragPan : true,
-	                                      enableDblClickZoom : false,
-	                                      mapMode : 0,
-	                                      activateTrafficMap : false,
-	                                      activateBicycleMap : false,
-	                                      minMaxLevel : [ 1, 14 ],
-	                                      size : new nhn.api.map.Size(800, 480)});
-
-    <% @restaurants.each_with_index do |restaurant, index| %>
-	    <% if restaurant.lat != nil && restaurant.lng != nil %>
-	    	var lat = <%= restaurant.lat %>;
-	    	var lng = <%= restaurant.lng %>;
-	    	var restaurant_name = '<%= restaurant.name %>';
-	    	var latlng = new nhn.api.map.LatLng(lat, lng);
-	    	var oMarker = new nhn.api.map.Marker(oIcon, {point: latlng, title: restaurant_name});
-				oMap.addOverlay(oMarker);
-	      //<% if index == 0 %>
-					// if currentPosition was not checked
-				//	if ( curr_lat == 0 || curr_lng == 0 || isNaN(curr_lat) || isNaN(curr_lng)){
-	      //		oMap.setCenter(latlng);
-				//	};
-	      //<% end %>
-	    <% end %>
-    <% end %>
-	};
 </script>
