--- a/app/views/blogs/_index.html.erb
+++ b/app/views/blogs/_index.html.erb
@@ -1,13 +1,13 @@
 <h2>Naver Blogs</h2>
 <% if !@naver_blogs.blank? %>
-	<%= render partial: "/blogs/blog", locals: { blogs: @naver_blogs } %>
+	<%= render partial: "/blogs/blog", collection: @naver_blogs, as: :blog %>
 <% else %>
 	<%= render "/blogs/no_blogs" %>
 <% end %>
 
 <h2>Daum Blogs</h2>
 <% if !@daum_blogs.blank? %>
-	<%= render partial: "/blogs/blog", locals: { blogs: @daum_blogs } %>
+	<%= render partial: "/blogs/blog", collection: @daum_blogs, as: :blog %>
 <% else %>
 	<%= render "/blogs/no_blogs" %>
 <% end %>
