--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,11 @@
 
 <% if current_user %>
 	<br><%= current_user.username %>
+	<% if current_user.fb_img.present? %>
+		<%= image_tag current_user.fb_img %>
+	<% else %>
+		<%= image_tag "profile.png", style: "height: 20px; width: 20px;" %>
+	<% end %>
 <% end %>
 
 <ul>
