Refresh menus#new form when new menu is created

--- a/app/views/menus/_new.html.erb
+++ b/app/views/menus/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>Menu#new</h1>
 
-<%= form_for([@restaurant, @menu], remote: true) do |f| %>
+<%= form_for([@restaurant, menu], remote: true) do |f| %>
 	<%= render "menu_titles/new", f: f %>
 	<br />
 
