--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -45,7 +45,7 @@
 </div>
 
 <div id="new_menu_section">
-	<%= render "menus/new" %>
+	<%= render partial: "menus/new", locals: { menu: @menu } %>
 </div>
 
 
