--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -1,1 +1,7 @@
 <h1>This is the homepage for MenuMap</h1>
+
+<input name="tag_gogo" id="gogo_tag" />
+
+<script>
+	$("#gogo_tag").tagit();
+</script>
