--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,11 @@
 table, th, td {
 	border: 1px solid black;
 }
+
+ul.tagit li.tagit-choice a.tagit-close .text-icon {
+	display: block;
+  text-decoration: none;
+  font-weight: bold;
+  margin-left: 2px;
+  line-height: 10px;
+}	
