Move static images from S3 to local

--- a/app/views/mymaps/_field.html.erb
+++ b/app/views/mymaps/_field.html.erb
@@ -3,10 +3,25 @@
 <%= f.label :group %>
 <% 1.upto(10) do |n| %>
 	<label for="mymap_group_<%= n %>"> 
-		<%= image_tag s3_image_url("mymap_group_icon_#{n}.png"), id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
+		<%= image_tag "/images/mymaps/mymap_group_icon_#{n}.png", id: "mymap_group_icon_#{n}", style: "height: 20px; width: 20px;" %> 
 		<%= f.radio_button :group, n %>
 	</label>
 <% end %>
 
 <%= f.label :contents %>
 <%= f.text_field :contents %>
+
+<script>
+	$(document).ready( function() {
+		slangCheck("#new_mymap", "#mymap_contents");
+	});
+	$("#star_rating_form").raty({
+		path: "/images/star_rating/",
+		half: true,
+		scoreName: "mymap[rating]",
+		// In mymaps#edit, star rating should show for references.
+		score: function() {
+			return parseInt($(this).attr("data-score")) / 2;
+		}
+	});
+</script>
