--- a/app/views/layouts/_api_key.html.erb
+++ b/app/views/layouts/_api_key.html.erb
@@ -1,4 +1,4 @@
 <!-- Naver Map -->
-<script src="http://openapi.map.naver.com/openapi/naverMap.naver?ver=2.0&key=<%= Naver::MAP_KEY_JB1 %>"></script>
+<script src="http://openapi.map.naver.com/openapi/naverMap.naver?ver=2.0&key=<%= Naver::MAP_KEY_JB %>"></script>
 <!-- Kakao -->
 <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
