--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,6 +1,21 @@
 <tr id="comment_<%= comment.id %>">
 	<td style="width: 340px;"><%= comment.contents %></td>
+	<% if !comment.rating.blank? && comment.rating != 0 %>
+		<td class="star_rating" data-score=<%= comment.rating%>></td>
+	<% else %>
+		<td></td>
+	<% end %>
 	<td><%= time_ago_in_words(comment.created_at) %> 전</td>
 	<td><%= link_to "edit", edit_comment_path(comment), class: "edit_comment", remote: true %>
 	<td><%= link_to "delete", comment_path(comment), class: "delete_comment", method: :delete, remote: true, data: { confirm: "gogo?" } %>
 </tr>
+
+<script>
+	$(".star_rating").raty({
+		path: "/images/star_rating/",
+		readOnly: true,
+		score: function() {
+			return parseInt($(this).attr("data-score")) / 2;
+		}
+	});
+</script>
