--- a/app/views/menus/_show.html.erb
+++ b/app/views/menus/_show.html.erb
@@ -8,3 +8,16 @@
 	<td><%= link_to "edit", edit_menu_path(menu), class: "edit_menu", remote: true %>
 	<td><%= link_to "delete", menu_path(menu), class: "delete_menu", method: :delete, remote: true, data: { confirm: "gogo?" } %>
 </tr>
+
+<script>
+	$("#menu_<%= menu.id %>").click(function(){
+		<% if !menu.comments.blank? %>
+			$(".modal-title").html("Comments");
+			$(".modal-body").html("<%= j(render partial: "comments/show", collection: menu.comments, as: :comment) %>");
+			$("#myModal").modal({
+		    keyboard: true,
+		    backdrop: "static"
+		  });
+		<% end %>
+	});
+</script>
