--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -22,6 +22,9 @@
 	</div>
 </div>
 <br />
+
+<%= link_to "restaurant register" , new_rest_register_path %>
+
 <%= link_to "new_notice", new_notice_path %>
 
 <!-- Show modal for questions#new on click -->
