Structure for profiles#edit and MyMap

--- a/app/views/mymaps/index.html.erb
+++ b/app/views/mymaps/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Mymap#index</h1>
 
+<%= render "shared/user_navigation" %>
+
 <% content_for :head do %>
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@luke9407" />
