--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -1,8 +1,8 @@
 <h2>Profiles#edit</h2>
 
-<%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
-  <%# devise_error_messages! #%>
+<%= render "shared/user_navigation" %>
 
+<%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, disabled: true %>
@@ -12,10 +12,6 @@
     <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
-
-  <%# if devise_mapping.confirmable? && @user.pending_reconfirmation? #%>
-    <!-- <div>Currently waiting confirmation for: <%# @user.unconfirmed_email #%></div> -->
-  <%# end #%>
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
@@ -37,8 +33,4 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= button_to "Cancel my account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete %>
