--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -23,9 +23,9 @@
 </div>
 <br />
 
-<%= link_to "restaurant register" , new_rest_register_path %>
+<%= link_to "restaurant register" , new_rest_register_path %><br />
 
-<%= link_to "new_notice", new_notice_path %>
+<%= link_to "new_notice", new_notice_path %><br />
 
 <!-- Show modal for questions#new on click -->
 <%= link_to "new question", "#new_question" %>
