--- a/app/views/shared/_user_navigation.html.erb
+++ b/app/views/shared/_user_navigation.html.erb
@@ -1,2 +1,4 @@
-<%= link_to "my page", user_profile_path(current_user.username) %>
-<%= link_to "MyMap", mymap_index_path(current_user.username) %> 
+<% if current_user %>
+	<%= link_to "my page", user_profile_path(current_user.username) %>
+	<%= link_to "MyMap", mymap_index_path(current_user.username) %> 
+<% end %>
