--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,9 @@
 					<span class="glyphicon glyphicon-search"></span>
 				<% end %>
 			</button>
-			<%= link_to "MenuMap", root_path, class: "navbar-brand" %>
+			<%= link_to root_path, class: "navbar-brand" do %>
+				<span class="ubuntu">MenuMap</span>
+			<% end %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
