Make signup, password reset and profiles#edit page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,7 +13,7 @@ ul.tagit li.tagit-choice a.tagit-close .text-icon {
   line-height: 10px;
 }	
 
-html, body, h1, h2, h3, h4, h5, h6, p, a {
+html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 	font-family: 'Noto Sans', sans-serif;
 }
 
