--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,14 +1,13 @@
-<h2>Forgot your password?</h2>
+<div class="col-md-6 col-md-offset-3">
+	<!--%= devise_error_messages! %-->
+	<legend>비밀번호 찾기</legend>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+		<div class="form-group">
+			<%= f.email_field :email, { class: "form-control", autofocus: true, placeholder: "이메일*" } %>
+		</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+		<%= f.button "이메일 전송", class: "btn btn-primary btn-block" %>
+	<% end %>
+</div>
