--- a/app/views/users/profiles/edit.html.erb
+++ b/app/views/users/profiles/edit.html.erb
@@ -1,36 +1,32 @@
-<h2>Profiles#edit</h2>
+<div class="col-md-6 col-md-offset-3">
+	<div style="border-bottom: solid 1px gray; margin-bottom: 2em; padding: 1em 0;">
+		<%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
+			<legend>계정 변경</legend>
 
-<%= render "shared/user_navigation" %>
+			<div class="form-group">
+				<%= f.email_field :email, { class: "form-control", disabled: true } %>
+			</div>
 
-<%= form_for(@user, url: registration_path(@user), html: { method: :put }) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, disabled: true %>
-  </div>
+			<div class="form-group">
+				<%= f.text_field :username, { class: "form-control", placeholder: "유저명*" } %>
+			</div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
+			<div class="form-group">
+				<%= f.label :currnet_password, "비밀번호 변경" %> <i>(비밀번호를 변경하지 않는 경우 비워주세요.)</i>
+				<%= f.password_field :current_password, { class: "form-control", autocomplete: "off", placeholder: "현재 비밀번호" } %>
+			</div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+			<div class="form-group">
+				<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호*" } %>
+			</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+			<div class="form-group">
+				<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "새 비밀번호 확인*" } %>
+			</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+			<%= f.button "변경사항 저장", class: "btn btn-primary btn-block" %>
+		<% end %>
+	</div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<%= button_to "Cancel my account", registration_path(@user), data: { confirm: "Are you sure?" }, method: :delete %>
+	<%= button_to "계정 삭제", registration_path(@user), { class: "btn btn-block btn-danger", data: { confirm: "현재 계정이 영원히 삭제됩니다. 계속 하시겠습니까?" }, method: :delete } %>
+</div>
