--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,34 +1,36 @@
 <% provide(:page_title, "회원가입") %>
-<h2>Sign up</h2>
-<%= link_to "facebook login" , user_omniauth_authorize_path(:facebook) %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<div class="col-md-6 col-md-offset-3">
+	<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
-  </div>
+	<div style="border-bottom: solid 1px gray; margin-bottom: 2em; padding: 1em 0;">
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+			<legend>회원가입</legend>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+			<div class="form-group">
+				<%= f.email_field :email, { class: "form-control", autofocus: true, placeholder: "이메일*" } %>
+			</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+			<div class="form-group">
+				<%= f.text_field :username, { class: "form-control", placeholder: "유저명*" } %>
+			</div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+			<div class="form-group">
+				<%= f.password_field :password, { class: "form-control", autocomplete: "off", placeholder: "비밀번호*" } %>
+			</div>
+
+			<div class="form-group">
+				<%= f.password_field :password_confirmation, { class: "form-control", autocomplete: "off", placeholder: "비밀번호 확인*" } %>
+			</div>
+
+			<div class="actions">
+				<%= f.button "가입", class: "btn btn-primary btn-block" %>
+			</div>
+		<% end %>
+	</div>
+
+	<%= link_to user_omniauth_authorize_path(:facebook), class: "btn btn-block btn-social btn-facebook" do %>
+		<i class="fa fa-facebook"></i> 페이스북으로 회원가입
+	<% end %>
+</div>
