Add validate() to users/viewfiles

--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -11,3 +11,13 @@
 		<%= f.button "이메일 전송", class: "btn btn-primary btn-block" %>
 	<% end %>
 </div>
+
+<script>
+	$(document).ready( function() {
+		$('#new_user').validate({
+			rules: {
+				'user[email]': { required: true, email: true },
+			}
+		});
+	});
+</script>
