--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -34,3 +34,24 @@
 		<i class="fa fa-facebook"></i> 페이스북으로 회원가입
 	<% end %>
 </div>
+
+<script>
+	$(document).ready( function() {
+		$('#new_user').validate({
+			rules: {
+				'user[email]': { required: true, email: true },
+				'user[username]': { required: true },
+				'user[password]': { required: true, minlength: 8 },
+				'user[password_confirmation]': { 
+					required: true, equalTo: '#user_password' }
+			}
+		});
+	});
+	$('button').click( function(e) {
+		var text = $('#user_username').val();
+		if ((textByteCheck(text) > 0) && (textByteCheck(text) < 6)) {
+			alert('username must be biggert than 6bytes');
+			e.preventDefault();
+		};
+	});
+</script>
