--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% if flash.any? %>
 	<% flash.each do |msg_type, msg| %>
-		<h1 style="color: red;"><%= msg %></h1>
+		<h1 id="flash" style="color: red;"><%= msg %></h1>
 	<% end %>
 <% end %>
