rest_registers#new page

--- a/app/views/shared/_category_select.html.erb
+++ b/app/views/shared/_category_select.html.erb
@@ -1,7 +1,11 @@
 <!-- options_for_select(options[text, value], selected) -->
-<%= f.select :category_id, 
-			options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
-																		{}, { id: "category_select" } %>
-<%= f.select :subcategory_id, 
-			options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
-																		{}, { id: "subcategory_select" } %>
+<div class="col-xs-6">
+	<%= f.select :category_id, 
+				options_for_select(@categories.map{ |c| [c.name, c.id] }, nil), 
+																			{}, { id: "category_select", class: "form-control" } %>
+</div>
+<div class="col-xs-6">
+	<%= f.select :subcategory_id, 
+				options_for_select(@subcategories.map{ |s| [s.name, s.id] }, nil),
+																			{}, { id: "subcategory_select", class: "form-control" } %>
+</div>
