--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -20,6 +20,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 .ubuntu {
 	font-family: 'Ubuntu';
 	font-weight: bold;
+	color: #dd4814;
 }
 
 .btn-facebook {
