--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,33 +1,23 @@
 <% provide(:page_title, "문의사항") %>
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			<div id="mm-help">
-				<div id="mm-help-title">
-					<h1>자주묻는 질문</h1>
-				</div>
-				<% @notices.each do |notice| %>
-					<div class="mm-help-qna">
-						<a data-toggle="collapse" href="#mm-help-col-<%= notice.id %>">
-							<h3><%= notice.question %></h3>
-						</a>
-						<div id="mm-help-col-<%= notice.id %>" class="panel-collapse collapse">
-							<p><%= notice.answer %></p>
-						</div>
-					</div>
-				<% end %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1>Q & A</h1>
+		<%= link_to "질문하기", new_question_path, remote: true, data: { toggle: "modal", target: "#myModal" } %>
+
+		<% @notices.each do |notice| %>
+			<a data-toggle="collapse" href="#notice_<%= notice.id %>">
+				<h3><%= notice.question %></h3>
+			</a>
+			<div id="notice_<%= notice.id %>" class="panel-collapse collapse">
+				<p><%= notice.answer %></p>
 			</div>
-		</div>
+		<% end %>
 	</div>
 </div>
-<br />
 
-<%= link_to "restaurant register" , new_rest_register_path %><br />
+<% if current_user && current_user.admin %>
+	<%= link_to "new_notice", new_notice_path %><br />
+<% end %>
 
-<%= link_to "new_notice", new_notice_path %><br />
-
-<!-- Show modal for questions#new on click -->
-<%= link_to "new question", "#new_question" %>
-
-<%= render "questions/new" %>
+<%= render 'shared/modal' %>
