--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -2,15 +2,21 @@
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<h1>Q & A</h1>
-		<%= link_to "질문하기", new_question_path, remote: true, data: { toggle: "modal", target: "#myModal" } %>
+		<div style="position: relative;">
+			<h1 style="display: inline;">Q & A</h1>
+			<%= link_to "질문하기", new_question_path, remote: true, data: { toggle: "modal", target: "#myModal" }, style: "position: absolute; bottom: 0; right: 0;" %>
+		</div>
 
 		<% @notices.each do |notice| %>
 			<a data-toggle="collapse" href="#notice_<%= notice.id %>">
-				<h3><%= notice.question %></h3>
+				<h3><i class="fa fa-angle-right"></i> <%= notice.question %></h3>
 			</a>
 			<div id="notice_<%= notice.id %>" class="panel-collapse collapse">
-				<p><%= notice.answer %></p>
+				<p><%= notice.answer.html_safe %></p>
+				<% if current_user && current_user.admin %>
+					<%= link_to "edit", edit_notice_path(notice) %>
+					<%= link_to "destroy", notice_path(notice), method: :delete %>
+				<% end %>
 			</div>
 		<% end %>
 	</div>
