--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -33,3 +33,28 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, input, textarea, button {
 		color: white;
 	}
 }
+
+#home_bg {
+	background-image: url('/images/menumap/home_bg.jpg');
+	margin-top: -20px;
+	height: 200px;
+	color: white;
+	text-align: center;
+	h1 {
+		margin: 0;
+		font-size: 4em;
+	}
+	p {
+		margin: 0;
+		padding-top: 50px;
+	}
+}
+
+#home_blockquote {
+	margin-top: 20px;
+}
+
+#home_info {
+	margin: 15px 0;
+	font-size: 1.2em;
+}
