--- a/app/views/home/brandpage.html.erb
+++ b/app/views/home/brandpage.html.erb
@@ -1,1 +1,48 @@
-<h1>This is the homepage for MenuMap</h1>
+</div>
+<!-- Close container for background image -->
+	<div>
+		<div id="home_bg">
+			<p>이 세상 모든 메뉴가 검색되는 그날까지</p>
+			<h1><span class="ubuntu" style="color: white;">MenuMap</span></h1>
+		</div>
+	</div>
+
+<!-- Start container again -->
+<div class="container">
+	<div id="home_blockquote">
+		<div class="row">
+			<div class="col-md-5 hidden-xs">
+				<p><span class="ubuntu">MenuMap</span>은</p>
+			</div>
+			<div class="col-md-7">
+				<blockquote>
+					<p>9월의 목표는 10,000 daily session</p>
+					<p>10월부터도 계속 하기를</p>
+					<p>그러면 무슨 문구가 필요한가?</p>
+				</blockquote>
+			</div>
+		</div>
+	</div>
+
+	<div style="text-align: center;">
+		<div id="youtube">
+			<iframe src="https://www.youtube.com/embed/lTr6ypdlF_k?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		<div id="home_info">
+			<span class="ubuntu">MenuMap</span>에는 현재
+			<br class="visible-xs-inline" />
+			서울시 <span class="ubuntu"><%= total_restaurants %></span>
+			개 음식점 정보와<br />
+			대학가 <span class="ubuntu"><%= total_restaurants_with_menu %></span>
+			개 음식점의 <br class="visible-xs-inline" />
+			메뉴 <span class="ubuntu"><%= total_menus %></span>
+			개가 저장되어있습니다.
+		</div>
+
+		<div class="col-xs-10 col-xs-offset-1" style="padding: 0px;">
+			<%= button_to search_path, { class: "btn btn-block", style: "background-color: #dd4814; color: white;" } do %>
+				<span class="ubuntu" style="color: white;">MenuMap</span> 검색
+			<% end %>
+		</div>
+	</div>
